updating html and css

--- a/index.html
+++ b/index.html
@@ -21,20 +21,35 @@
 
       <div class="page-content">
         <ol>
-          <li>The Iron Yard welcomes new DC Engineering Cohorts</li>
-          <li>Beer is delicious, says beer spokesman</li>
-          <li>Let's stop laughing</li>
-          <li>node.js</li>
-          <li>Just Ruby Things</li>
-          <li>How to Ramen-ize Dried Pasta and Rice</li>
-          <li>Inside the world of longsword fighting</li>
-          <li>Does Sponsoring Daring Fireball Work?</li>
-          <li>Show HN: I made a site that lets you trade Bitcoin for bulletproof coffee</li>
-          <li>Chemists find a way to unboil eggs (this one is actually a real headline)</li>
-          <li>Beautiful law: how design can make law simpler</li>
-          <li>#dctech community member skateboards through new office</li>
-          <li>JavaScript engineer snaps, kills recruiter trying to fill a Java position</li>
+          <li> The Iron Yard welcomes new DC Engineering Cohorts<span> (theironyard.com)</span></li>
+              <p>144 points by booradley 1 hr ago | 355 comments</p>
+          <li>Beer is delicious, says beer spokesman<span> (hopsandgrain.cs)</span></li>
+              <p>114 points by booradley 2 hr ago | 35 comments</p>
+          <li>Let's stop laughing at Groupon<span> (fortune.com)</span></li>
+              <p>134 points by booradley 1 hr ago | 3555 comments</p>
+          <li>node.js<span> (nodejs.com)</span></li>
+              <p>124 points by booradley 4 hr ago | 335 comments</p>
+          <li>Just Ruby Things<span> (justthingsruby.net)</span></li>
+              <p>154 points by booradley 4 hr ago | 335 comments</p>
+          <li>How to Ramen-ize Dried Pasta and Rice<span> (ramenisgood.com)</span></li>
+              <p>174 points by booradley 4 hr ago | 335 comments</p>
+          <li>Inside the world of longsword fighting<span> (knifeythings.net)</span></li>
+              <p>194 points by booradley 4 hr ago | 335 comments</p>
+          <li>Does Sponsoring Daring Fireball Work?<span> (drinkythings.net)</span></li>
+              <p>194 points by booradley 4 hr ago | 335 comments</p>
+          <li>Show HN: I made a site that lets you trade Bitcoin for bulletproof coffee<span> (eventually.io)</span></li>
+              <p>204 points by booradley 4 hr ago | 335 comments</p>
+          <li>Chemists find a way to unboil eggs (this one is actually a real headline)<span> (realstories.com)</span></li>
+              <p>214 points by booradley 4 hr ago | 335 comments</p>
+          <li>Beautiful law: how design can make law simpler<span> (lawyerstuff.com)</span></li>
+              <p>54 points by booradley 4 hr ago | 335 comments</p>
+          <li>#dctech community member skateboards through new office<span> (noonecares.org)</span></li>
+              <p>784 points by booradley 4 hr ago | 335 comments</p>
+          <li>JavaScript engineer snaps, kills recruiter trying to fill a Java position<span> (real.uk)</span></li>
+              <p>834 points by booradley 4 hr ago | 335 comments</p>
         </ol>
+      </div>
+      <div class="more-content">
           <p>More</p>
       </div>
 
