updated files per Eric's suggestions

--- a/index.html
+++ b/index.html
@@ -21,46 +21,46 @@
 
       <div class="page-content">
         <ol>
-          <li> The Iron Yard welcomes new DC Engineering Cohorts<span> (theironyard.com)</span></li>
-            <p>144 points by booradley 1 hr ago | 355 comments</p>
-          <li>Beer is delicious, says beer spokesman<span> (hopsandgrain.cs)</span></li>
-            <p>114 points by booradley 2 hr ago | 35 comments</p>
-          <li>Let's stop laughing at Groupon<span> (fortune.com)</span></li>
-            <p>134 points by booradley 1 hr ago | 3555 comments</p>
-          <li>node.js<span> (nodejs.com)</span></li>
-            <p>124 points by booradley 4 hr ago | 335 comments</p>
-          <li>Just Ruby Things<span> (justthingsruby.net)</span></li>
-            <p>154 points by booradley 4 hr ago | 335 comments</p>
-          <li>How to Ramen-ize Dried Pasta and Rice<span> (ramenisgood.com)</span></li>
-            <p>174 points by booradley 3567 hr ago | 335 comments</p>
-          <li>Inside the world of longsword fighting<span> (knifeythings.net)</span></li>
-            <p>194 points by booradley 4 hr ago | 335 comments</p>
-          <li>Does Sponsoring Daring Fireball Work?<span> (drinkythings.net)</span></li>
-            <p>194 points by booradley 5 hr ago | 335 comments</p>
-          <li>Show HN: I made a site that lets you trade Bitcoin for bulletproof coffee<span> (eventually.io)</span></li>
-            <p>204 points by booradley 4 hr ago | 335 comments</p>
-          <li>Chemists find a way to unboil eggs (this one is actually a real headline)<span> (realstories.com)</span></li>
-            <p>214 points by booradley 8 hr ago | 335 comments</p>
-          <li>Beautiful law: how design can make law simpler<span> (lawyerstuff.com)</span></li>
-            <p>54 points by booradley 4 hr ago | 335 comments</p>
-          <li>#dctech community member skateboards through new office<span> (noonecares.org)</span></li>
-            <p>784 points by booradley 14 hr ago | 335 comments</p>
-          <li>JavaScript engineer snaps neck of, and kills, recruiter trying to fill a Java position<span> (real.uk)</span></li>
-            <p>834 points by booradley 234 hr ago | 335 comments</p>
-          <li>Perky "Canada" has own government, laws<span> (theonion.com)</span></li>
-            <p>83 points by booradley 234 hr ago | 335 comments</p>
-          <li>CIA Realizes It's Been Using Black Highlighters All These Years<span> (theonion.com)</span></li>
-            <p>84 points by booradley 234 hr ago | 335 comments</p>
-          <li>Winner Didn't Even Know It Was Pie-Eating Contest<span> (theonion.com)</span></li>
-            <p>634 points by booradley 234 hr ago | 335 comments</p>
-          <li>Area Man Passionate Defender Of What He Imagines Constitution To Be<span> (theonion.com)</span></li>
-            <p>4 points by booradley 234 hr ago | 335 comments</p>
-          <li>Archaeological Dig Uncovers Ancient Race Of Skeleton People<span> (theonion.com)</span></li>
-            <p>93 points by booradley 234 hr ago | 335 comments</p>
-          <li>Dolphin Spends Amazing Vacation Swimming With Stockbroker<span> (theonion.com)</span></li>
-            <p>314 points by booradley 234 hr ago | 335 comments</p>
-          <li>orld Death Rate Holding Steady at 100 Percent<span> (theonion.com)</span></li>
-            <p>44 points by booradley 234 hr ago | 335 comments</p>
+          <li><div class="headline">The Iron Yard welcomes new DC Engineering Cohorts<span> (theironyard.com)</span></div>
+            <p>144 points by booradley 1 hr ago | 355 comments</p></li>
+          <li><div class="headline">Beer is delicious, says beer spokesman<span> (hopsandgrain.cs)</span></div>
+            <p>114 points by booradley 2 hr ago | 35 comments</p></li>
+          <li><div class="headline">Let's stop laughing at Groupon<span> (fortune.com)</span></div>
+            <p>134 points by booradley 1 hr ago | 3555 comments</p></li>
+          <li><div class="headline">node.js<span> (nodejs.com)</span></div>
+            <p>124 points by booradley 4 hr ago | 335 comments</p></li>
+          <li><div class="headline">Just Ruby Things<span> (justthingsruby.net)</span></div>
+            <p>154 points by booradley 4 hr ago | 335 comments</p></li>
+          <li><div class="headline">How to Ramen-ize Dried Pasta and Rice<span> (ramenisgood.com)</span></div>
+            <p>174 points by booradley 3567 hr ago | 335 comments</p></li>
+          <li><div class="headline">Inside the world of longsword fighting<span> (knifeythings.net)</span></div>
+            <p>194 points by booradley 4 hr ago | 335 comments</p></li>
+          <li><div class="headline">Does Sponsoring Daring Fireball Work?<span> (drinkythings.net)</span></div>
+            <p>194 points by booradley 5 hr ago | 335 comments</p></li>
+          <li><div class="headline">Show HN: I made a site that lets you trade Bitcoin for bulletproof coffee<span> (eventually.io)</span></div>
+            <p>204 points by booradley 4 hr ago | 335 comments</p></li>
+          <li><div class="headline">Chemists find a way to unboil eggs (this one is actually a real headline)<span> (realstories.com)</span></div>
+            <p>214 points by booradley 8 hr ago | 335 comments</p></li>
+          <li><div class="headline">Beautiful law: how design can make law simpler<span> (lawyerstuff.com)</span></div>
+            <p>54 points by booradley 4 hr ago | 335 comments</p></li>
+          <li><div class="headline">#dctech community member skateboards through new office<span> (noonecares.org)</span></div>
+            <p>784 points by booradley 14 hr ago | 335 comments</p></li>
+          <li><div class="headline">JavaScript engineer snaps neck of, and kills, recruiter trying to fill a Java position<span> (real.uk)</span></div>
+            <p>834 points by booradley 234 hr ago | 335 comments</p></li>
+          <li><div class="headline">Perky "Canada" has own government, laws<span> (theonion.com)</span></div>
+            <p>83 points by booradley 234 hr ago | 335 comments</p></li>
+          <li><div class="headline">CIA Realizes It's Been Using Black Highlighters All These Years<span> (theonion.com)</span></div>
+            <p>84 points by booradley 234 hr ago | 335 comments</p></li>
+          <li><div class="headline">Winner Didn't Even Know It Was Pie-Eating Contest<span> (theonion.com)</span></div>
+            <p>634 points by booradley 234 hr ago | 335 comments</p></li>
+          <li><div class="headline">Area Man Passionate Defender Of What He Imagines Constitution To Be<span> (theonion.com)</span></div>
+            <p>4 points by booradley 234 hr ago | 335 comments</p></li>
+          <li><div class="headline">Archaeological Dig Uncovers Ancient Race Of Skeleton People<span> (theonion.com)</span></div>
+            <p>93 points by booradley 234 hr ago | 335 comments</p></li>
+          <li><div class="headline">Dolphin Spends Amazing Vacation Swimming With Stockbroker<span> (theonion.com)</span></div>
+            <p>314 points by booradley 234 hr ago | 335 comments</p></li>
+          <li><div class="headline">World Death Rate Holding Steady at 100 Percent<span> (theonion.com)</span></div>
+            <p>44 points by booradley 234 hr ago | 335 comments</p></li>
         </ol>
       </div>
       <div class="more-content">
